# CRUD

./: README.md  client.py
Go-Gin/: README.md  client.py
Go-Gin/app/: go.mod  go.sum  main.go
Go-Gin/app/handlers/: user.go
Go-Gin/app/models/: user.go
Go-Gin/k8s/: gin.yaml  postgresql.yaml
Java-SpringBoot/: README.md
Java-SpringBoot/app/: build.gradle
Java-SpringBoot/app/src/main/java/xyz/zerohertz/crud/: CrudApplication.java
Java-SpringBoot/app/src/main/resources/: application.properties
Java-SpringBoot/app/src/test/java/xyz/zerohertz/crud/: CrudApplicationTests.java
JavaScript-Express/: README.md
JavaScript-Express/app/: .env  package-lock.json  package.json  server.js
JavaScript-Express/app/controllers/: userController.js
JavaScript-Express/app/db/: index.js
JavaScript-Express/app/routes/: userRoutes.js
JavaScript-Nest/: README.md
JavaScript-Nest/app/: package-lock.json  package.json
JavaScript-Nest/app/src/: app.module.ts  main.ts
JavaScript-Nest/app/src/user/: user.controller.ts  user.dto.ts  user.entity.ts  user.service.ts
Python-FastAPI/: README.md  requirements.txt
Python-FastAPI/app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
Python-FastAPI/k8s/: fastapi.yaml
Python-Flask/: README.md  requirements.txt
Python-Flask/app/: main.py
Rust-ActixWeb/: README.md
Rust-ActixWeb/app/: Cargo.toml  diesel.toml
Rust-ActixWeb/app/migrations/2024-08-01-111256_create_users/: up.sql
Rust-ActixWeb/app/src/: main.rs  models.rs  schema.rs
k8s/: backend.yaml
(+4 files in other folders)
